objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Create_IC_Program_Material_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defaults to unchecked. Only check if you want to also create a PHSS Material record which would result in the content being included in the IC community materials display logic.</description>
        <label>Create IC Program Material Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Community_Preview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the file is large or is an Adobe Presenter type PDF or other non-standard PDF then check this box and the IC Community will not attempt to preview the file. For large video files you may want to do the same and leave users with only the download option.</description>
        <label>Disable Community Preview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S3_URL__c</fullName>
        <label>S3 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_S3_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is S3 Content</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>